--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_launcher_icons: ^0.13.1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
